# device_matrix

./: CMakeLists.txt  LICENSE  README.md
cpp/: CMakeLists.txt  device_matrix.cu  device_matrix_tests.cu  runtime.cu
examples/: CMakeLists.txt  kernel.cu  matrix_mult.cu
include/device_matrix/: base.h  device_matrix.h  device_matrix_inl.h  func.h  profile.h  runtime.h  streams.h
